--- a/admin/index.jade
+++ b/admin/index.jade
@@ -4,20 +4,20 @@ html
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js")
+
     title Content Manager
 
     link(rel="icon", href= records.site.sitedata[0].icon, type="image/*")
     link(rel="shortcut icon", href= records.site.sitedata[0].icon, type="img/*")
 
-    link(rel="stylesheet", href="//cms.netlify.com/assets/cms.css")
-    link(rel="stylesheet", href="/css/skel.css")
-    link(rel="stylesheet", href="/css/style.css")
-    link(rel="stylesheet", href="/css/style-desktop.css")
-    link(rel="stylesheet", href="/css/webriq-template.css")
+    link(rel="stylesheet", href="//cms.webriq.com/assets/cms.css")
+
+    link(rel="stylesheet", href="../css/style.css")
 
 
     style.
-      .container {
+      .main-container {
         width: auto;
         max-width: 1200px;
       }
@@ -34,7 +34,7 @@ html
 
     script(type="text/x-handlebars" data-template-name='cms/preview/pages').
       <div id="main-wrapper">
-        <div class="container">
+        <div class="main-container">
           <!--Content-->
           <article class="box post">
             {{#if entry.banner }}
@@ -50,7 +50,7 @@ html
 
     script(type="text/x-handlebars" data-template-name='cms/preview/result').
           <div id="main-wrapper">
-          <div class="container">
+          <div class="main-container">
           <h1>Menu Items</h1>
           <hr>
           <ul class="menu-preview">
@@ -64,7 +64,7 @@ html
 
     script(type="text/x-handlebars" data-template-name='cms/preview/sitedata').
       <div id="main-wrapper">
-        <div class="container">
+        <div class="main-container">
             <h1>Website Information</h1>
             <hr>
           {{#cms-preview field="sitedata" as |sitedatas| }}
@@ -90,6 +90,5 @@ html
 
 
 
-    script(src="//cms.netlify.com/assets/vendor.js")
-    script(src="//cms.netlify.com/assets/cms.js")
-    script(src="/js/custom-admin.js")
+    script(src="//cms.webriq.com/assets/vendor.js")
+    script(src="//cms.webriq.com/assets/cms.js")
