--- a/admin/index.jade
+++ b/admin/index.jade
@@ -11,7 +11,7 @@ html
 
     link(rel="stylesheet", href="//cms.webriq.com/assets/cms.css")
 
-    link(rel="stylesheet", href="../css/style.css")
+    link(rel="stylesheet", href="/css/style.css")
 
 
     script!= "CMS_ENV = \"" + (process.env.CMS_ENV || "development") + "\";"
