--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,14 +19,25 @@
 	/**Menu Icons**/
 
 
-	#left_col-2 ul.cms.cms-nav-menu li a[href="#/collections/sitedata"]::before {
+	#left_col-2 ul.cms.cms-nav-menu li:nth-of-type(1) a::before {
 	  content: "\f013" !important;}
 
-	#left_col-2 ul.cms.cms-nav-menu li a[href="#/collections/menus"]::before {
+	#left_col-2 ul.cms.cms-nav-menu li:nth-of-type(2) a::before {
 	  content: "\f0c9"; }
 
-	#left_col-2 ul.cms.cms-nav-menu li a[href="#/collections/pages"]::before {
+	#left_col-2 ul.cms.cms-nav-menu li:nth-of-type(3) a::before  {
 	  content: "\f0f6"; }
+
+	#left_col-2 ul.cms.cms-nav-menu li:nth-of-type(4) a::before  {
+	  content: "\f24d"; }
+	#left_col-2 ul.cms.cms-nav-menu li:nth-of-type(5) a::before  {
+	  content: "\f1ea"; }
+
+	#left_col-2 ul.cms.cms-nav-menu li:nth-of-type(6) a::before  {
+	  content: "\f044"; }
+
+	#left_col-2 ul.cms.cms-nav-menu li:nth-of-type(7) a::before  {
+	  content: "\f0c0"; }
 
 	/**Menu Icons End Here**/
 
