remove all stock css and js

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -7,195 +7,8 @@ body
   padding: 0px
   font-family: "Open sans", Arial, sans-serif
 
-a
-  color: blue-darken-1
+header, .footer
+  text-align:center
 
-a:hover, a:focus
-  color: blue-darken-2
-
-.team-box.text-center img
-  margin:0px auto;
-
-.team-box.text-center p strong
-  color: blue-darken-1
-
-section
-  background-color:#fff;
-
-section#services
-  border-bottom:1px solid #f1f1f1;
-
-.short-section.stats-bar
-  padding:20px 0px 30px 0px;
-
-.short-section.stats-bar .counter-item h2
-  font-weight:700;
-  font-size:46px
-
-.short-section.stats-bar .counter-item h6
-  text-transform:uppercase;
-  font-size:14px;
-  font-weight:300;
-
-
-.btn-primary
-  background-color: light-blue
-
-.btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary
-  background-color: blue-darken-1
-
-.navbar-default.affix .navbar-header .navbar-brand,
-.navbar-default .nav > li.active>a, .navbar-default .nav>li.active>a:focus,
-.navbar-default.affix .nav > li>a:hover, .navbar-default.affix .nav>li>a:focus:hover,
-.navbar-default.affix .navbar-header .navbar-brand:hover, .navbar-default.affix .navbar-header .navbar-brand:focus,
-.navbar-default .nav > li>a:hover, .navbar-default .nav>li>a:focus:hover
-  color: #fff
-
-#bs-example-navbar-collapse-1 > ul
-  margin-top:0px
-  margin-bottom:0px
-
-#bs-example-navbar-collapse-1 > ul > li
-  @media (max-width:767px)
-    border-bottom: 1px solid #F6F6F6
-    box-shadow: 0px 0px 3px -1px #ddd
-    -webkit-box-shadow: 0px 0px 3px -1px #F1F1F1
-
-.bg-primary
-  background-color: light-blue
-
-.text-primary
-  color: blue-lighten-1
-
-hr
- border-color: blue-darken-1
-
-.portfolio-box .portfolio-box-caption
-  background-color: black
-  background-color: rgba(38, 178, 241, 0.8)
-
-.navbar-default .navbar-toggle
-  border-color:#fff
-
-.navbar-default .navbar-toggle:focus,
-.navbar-default .navbar-toggle:hover{
-  background-color: transparent
-}
-
-.navbar-default .navbar-toggle .icon-bar
-  background-color:#fff
-
-body.main header
-  min-height: 30%;
-  background-image: url(../img/header3.jpg);
-  background-position: top;
-  background-repeat:no-repeat;
-
-.page header
-  padding: 20px 0px
-  text-align:left
-  color: #222
-  font-weight: 700
-
-body.main .content h2.title
-  border-bottom:1px solid #dfdfdf
-  padding-bottom:10px
-  margin-bottom:20px
-  font-weight:600
-
-body.main .content h2.title strong
-  color: light-blue
-  font-weight:600
-
-body.main .addthis_sharing_toolbox
-  clear:both
-
-
-#panel
-  padding:0px
-  position:fixed
-  width:250px
-  z-index:1
-  top:39.5%
-
-  @media (max-width:767px)
-    position:relative
-    width:100%
-
-
-#panel .list-group-item:first-child
-  background-color:blue-darken-1
-  color:#fff
-
-#panel .list-group-item:first-child h4
-  margin:5px auto
-
-section#our-prices
-  background-color:#f7f7f7
-
-#contact
-  background-color:#222
-  color:#fff;
-  padding:50px 0px
-.footer #copyright
-  padding:0px
-  background-color:#1F1F1F
-
-.footer #copyright p
-  margin:0px
-  color:#555
-  padding:15px 0px
-
-#contact ul
-  margin-left:0px
-  padding-left:10px
-  list-style:none
-
-#contact hr
-  border-color:#fff
-
-#contact a
-  color:#fff
-
-// Blog
-
-.main .blog
-  padding:0px
-  box-shadow:0px 1px 5px 0px #bbb
-  margin-bottom:20px
-
-.main .blog .blog-header h3
-  margin:0px
-  color:#fff
-
-.main .blog .blog-header
-  padding:15px
-  background-color:blue-darken-1
-
-.main .blog .blog-list .list
-  border-bottom: 1px solid #DFDFDF;
-  box-shadow: 0px 0px 3px -1px #FFF;
-  -webkit-box-shadow: 0px 0px 3px -1px #FFF;
-  padding:10px
-  background-color:#ECECEC
-
-.main .blog .blog-list .list h5
-  margin:4px auto
-.main .blog .blog-list .list a
-  color:#212121
-
-@media (min-width: 768px)
-  .container
-    width:auto
-    max-width:1170px
-
-
-@media (max-width:680px)
-  body .main
-    padding:0px;
-
-  body .main header
-    padding:50px 0px;
-
-  header .header-content
-    padding:100px 15px 0px 15px;
+header
+  padding: 5em 0em
