--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,27 +13,15 @@ html
 
     title= records.site.sitedata[0].sitename
 
-    link(rel="stylesheet", href="../css/bootstrap.min.css" type="text/css")
     link(rel="icon", href= records.site.sitedata[0].icon, type="image/*")
     link(rel="shortcut icon", href= records.site.sitedata[0].icon, type="img/*")
 
-    <!-- Custom Fonts -->
-    link(href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800', rel='stylesheet', type='text/css')
-    link(href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic', rel='stylesheet', type='text/css')
-    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
-
-    <!-- Plugin CSS -->
-    link(rel="stylesheet", href="../css/animate.min.css", type="text/css")
 
     <!-- Custom CSS -->
-    link(rel="stylesheet", href="../css/creative.css", type="text/css")
-    link(rel="stylesheet", href="../css/master.css", type="text/css")
+    != css()
 
 
   body#page-top
-
-    nav#mainNav.navbar.navbar-default
-      include includes/menu
 
     div.main
       include includes/header
