--- a/admin/index.jade
+++ b/admin/index.jade
@@ -15,7 +15,7 @@ html
 
 
     script!= "CMS_ENV = \"" + (process.env.CMS_ENV || "development") + "\";"
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js")
+    script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
 
     base(href="/admin/")
   body
