--- a/views/includes/footer.jade
+++ b/views/includes/footer.jade
@@ -6,6 +6,7 @@ section#copyright
 
 
 	!= js()
+	script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
 
 
 	<!-- Google Analytics -->
