--- a/views/index.jade
+++ b/views/index.jade
@@ -160,7 +160,7 @@ block content
       .container
         p.text-center.subblogttle TRENDING
         h1.tleblog.text-center BLOG POST
-        .row
+        .row.blogrow1
           .col-md-8.firstpostvisible
             .news-list
               .row            
@@ -274,7 +274,7 @@ block content
 
 
 
-        .news-list
+        .news-list.blogrow2
           .row            
             each item in sortBy(blog).slice(2,5)
               .col-md-4.col-sm-4.col-xs-4.itemblogsbob
