--- a/views/includes/header-new.jade
+++ b/views/includes/header-new.jade
@@ -93,8 +93,8 @@
     .container
       .row
         .col-md-12.text-center.detleft-slider
-          h1 WebriQ Blog
-          h4 We enhance the online credibility of your business
+          h1=records.config.configslider[0].slidertext
+          h4=records.config.configslider[0].slidersubtext
           .imgslideranimate
             img.hvr-bob.img1slide1(src="../img/bob/slider-right.png")
             img.hvr-bob.img1slide2(src="../img/bob/slider-right2.png")
