--- a/views/index.jade
+++ b/views/index.jade
@@ -199,27 +199,21 @@ block content
               .row            
                 each item in sortBy(blog).slice(0,1)
                   .col-md-12.col-sm-12.col-xs-12.itemblogsbob
-                    .list.box-shadow
+                    .list.box-shadow.listsmallcard
 
                         // Item Thumbnail
                         .list-thumbnail
                             img.img-responsive(src=item.thumbnail)
+                            .date
+                                svg(width="15" xmlns='http://www.w3.org/2000/svg', viewbox='0 0 511.634 511.634')
+                                    path(d='M482.513 83.942c-7.225-7.233-15.797-10.85-25.694-10.85h-36.542v-27.41c0-12.56-4.477-23.315-13.422-32.26C397.906 4.474 387.156 0 374.59 0h-18.267c-12.565 0-23.318 4.475-32.264 13.422-8.95 8.945-13.423 19.7-13.423 32.26v27.41h-109.63v-27.41c0-12.56-4.475-23.314-13.422-32.26C178.64 4.475 167.885 0 155.32 0h-18.27c-12.562 0-23.317 4.475-32.264 13.422-8.945 8.945-13.42 19.7-13.42 32.26v27.41H54.822c-9.9 0-18.464 3.618-25.697 10.85-7.233 7.233-10.85 15.8-10.85 25.698v365.453c0 9.89 3.617 18.456 10.85 25.693 7.232 7.23 15.796 10.85 25.697 10.85h401.99c9.896 0 18.47-3.618 25.693-10.85 7.234-7.234 10.852-15.804 10.852-25.693V109.64c0-9.9-3.615-18.465-10.845-25.698zM347.187 45.686c0-2.667.85-4.858 2.56-6.567 1.71-1.712 3.9-2.57 6.57-2.57h18.268c2.67 0 4.853.855 6.57 2.57 1.712 1.71 2.567 3.902 2.567 6.566v82.224c0 2.666-.855 4.853-2.567 6.567-1.718 1.71-3.9 2.568-6.57 2.568h-18.268c-2.67 0-4.86-.855-6.57-2.568-1.71-1.715-2.56-3.9-2.56-6.567V45.686zm-219.272 0c0-2.667.855-4.858 2.568-6.567 1.714-1.712 3.9-2.57 6.567-2.57h18.27c2.668 0 4.86.855 6.568 2.57 1.71 1.71 2.57 3.902 2.57 6.566v82.224c0 2.666-.855 4.856-2.57 6.567-1.713 1.71-3.9 2.568-6.567 2.568h-18.27c-2.666 0-4.856-.855-6.567-2.568-1.71-1.715-2.568-3.9-2.568-6.567V45.686zm328.897 429.402H54.822v-292.36h401.99v292.36z')
+
+                                =dateFormat(item.date, "dddd, YYYY") 
 
                         // Item Heading Info
                         .list-heading
                             h1 
-                                a(href=item.permalink)= item.title
-                            .author
-                                svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 563.43 563.43')
-                                    path(d='M280.79 314.56c83.266 0 150.803-67.54 150.803-150.804S364.055 13.416 280.79 13.416s-150.803 67.537-150.803 150.34S197.524 314.56 280.79 314.56zm0-261.825c61.06 0 111.02 49.96 111.02 111.02s-49.96 111.02-111.02 111.02-111.02-49.958-111.02-111.02 49.958-111.02 111.02-111.02zM19.89 550.015h523.65c11.1 0 19.89-8.79 19.89-19.89 0-104.083-84.653-189.2-189.198-189.2H189.198C85.116 340.926 0 425.58 0 530.126c0 11.1 8.79 19.89 19.89 19.89zM189.2 380.708h185.034c75.864 0 138.313 56.436 148.028 129.524H41.17c9.714-72.625 72.164-129.524 148.028-129.524z')
-
-
-                                = item.author
-                            .date
-                                svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 511.634 511.634')
-                                    path(d='M482.513 83.942c-7.225-7.233-15.797-10.85-25.694-10.85h-36.542v-27.41c0-12.56-4.477-23.315-13.422-32.26C397.906 4.474 387.156 0 374.59 0h-18.267c-12.565 0-23.318 4.475-32.264 13.422-8.95 8.945-13.423 19.7-13.423 32.26v27.41h-109.63v-27.41c0-12.56-4.475-23.314-13.422-32.26C178.64 4.475 167.885 0 155.32 0h-18.27c-12.562 0-23.317 4.475-32.264 13.422-8.945 8.945-13.42 19.7-13.42 32.26v27.41H54.822c-9.9 0-18.464 3.618-25.697 10.85-7.233 7.233-10.85 15.8-10.85 25.698v365.453c0 9.89 3.617 18.456 10.85 25.693 7.232 7.23 15.796 10.85 25.697 10.85h401.99c9.896 0 18.47-3.618 25.693-10.85 7.234-7.234 10.852-15.804 10.852-25.693V109.64c0-9.9-3.615-18.465-10.845-25.698zM347.187 45.686c0-2.667.85-4.858 2.56-6.567 1.71-1.712 3.9-2.57 6.57-2.57h18.268c2.67 0 4.853.855 6.57 2.57 1.712 1.71 2.567 3.902 2.567 6.566v82.224c0 2.666-.855 4.853-2.567 6.567-1.718 1.71-3.9 2.568-6.57 2.568h-18.268c-2.67 0-4.86-.855-6.57-2.568-1.71-1.715-2.56-3.9-2.56-6.567V45.686zm-219.272 0c0-2.667.855-4.858 2.568-6.567 1.714-1.712 3.9-2.57 6.567-2.57h18.27c2.668 0 4.86.855 6.568 2.57 1.71 1.71 2.57 3.902 2.57 6.566v82.224c0 2.666-.855 4.856-2.57 6.567-1.713 1.71-3.9 2.568-6.567 2.568h-18.27c-2.666 0-4.856-.855-6.567-2.568-1.71-1.715-2.568-3.9-2.568-6.567V45.686zm328.897 429.402H54.822v-292.36h401.99v292.36z')
-
-                                =dateFormat(item.date, "dddd, YYYY")                             
+                                a(href=item.permalink)= item.title                                                    
                         
 
                         // Item Description
@@ -228,37 +222,40 @@ block content
 
                         // Item Footer
                         .list-footer
-                            .read-more
-                                a(href=item.permalink)
-                                    | Read more
-                            .sharer
+                            .row
+                                .col-sm-7
+                                    .author
+                                        //- svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 563.43 563.43')
+                                        //-     path(d='M280.79 314.56c83.266 0 150.803-67.54 150.803-150.804S364.055 13.416 280.79 13.416s-150.803 67.537-150.803 150.34S197.524 314.56 280.79 314.56zm0-261.825c61.06 0 111.02 49.96 111.02 111.02s-49.96 111.02-111.02 111.02-111.02-49.958-111.02-111.02 49.958-111.02 111.02-111.02zM19.89 550.015h523.65c11.1 0 19.89-8.79 19.89-19.89 0-104.083-84.653-189.2-189.198-189.2H189.198C85.116 340.926 0 425.58 0 530.126c0 11.1 8.79 19.89 19.89 19.89zM189.2 380.708h185.034c75.864 0 138.313 56.436 148.028 129.524H41.17c9.714-72.625 72.164-129.524 148.028-129.524z')
+                                        img.postadmingthumb(src=item.postthumb, width="25px")
+
+                                        = item.author
+                                .col-sm-5
+                                    .read-more
+                                        a(href=item.permalink)
+                                            | Read more
+                                    .sharer
 
           .col-md-4
             .news-list
               .row            
                 each item in sortBy(blog).slice(1,2)
                   .col-md-12.col-sm-12.col-xs-12.itemblogsbob
-                    .list.box-shadow
+                    .list.box-shadow.listsmallcard
 
                         // Item Thumbnail
                         .list-thumbnail
                             img.img-responsive(src=item.thumbnail)
+                            .date
+                                svg(width="15" xmlns='http://www.w3.org/2000/svg', viewbox='0 0 511.634 511.634')
+                                    path(d='M482.513 83.942c-7.225-7.233-15.797-10.85-25.694-10.85h-36.542v-27.41c0-12.56-4.477-23.315-13.422-32.26C397.906 4.474 387.156 0 374.59 0h-18.267c-12.565 0-23.318 4.475-32.264 13.422-8.95 8.945-13.423 19.7-13.423 32.26v27.41h-109.63v-27.41c0-12.56-4.475-23.314-13.422-32.26C178.64 4.475 167.885 0 155.32 0h-18.27c-12.562 0-23.317 4.475-32.264 13.422-8.945 8.945-13.42 19.7-13.42 32.26v27.41H54.822c-9.9 0-18.464 3.618-25.697 10.85-7.233 7.233-10.85 15.8-10.85 25.698v365.453c0 9.89 3.617 18.456 10.85 25.693 7.232 7.23 15.796 10.85 25.697 10.85h401.99c9.896 0 18.47-3.618 25.693-10.85 7.234-7.234 10.852-15.804 10.852-25.693V109.64c0-9.9-3.615-18.465-10.845-25.698zM347.187 45.686c0-2.667.85-4.858 2.56-6.567 1.71-1.712 3.9-2.57 6.57-2.57h18.268c2.67 0 4.853.855 6.57 2.57 1.712 1.71 2.567 3.902 2.567 6.566v82.224c0 2.666-.855 4.853-2.567 6.567-1.718 1.71-3.9 2.568-6.57 2.568h-18.268c-2.67 0-4.86-.855-6.57-2.568-1.71-1.715-2.56-3.9-2.56-6.567V45.686zm-219.272 0c0-2.667.855-4.858 2.568-6.567 1.714-1.712 3.9-2.57 6.567-2.57h18.27c2.668 0 4.86.855 6.568 2.57 1.71 1.71 2.57 3.902 2.57 6.566v82.224c0 2.666-.855 4.856-2.57 6.567-1.713 1.71-3.9 2.568-6.567 2.568h-18.27c-2.666 0-4.856-.855-6.567-2.568-1.71-1.715-2.568-3.9-2.568-6.567V45.686zm328.897 429.402H54.822v-292.36h401.99v292.36z')
+
+                                =dateFormat(item.date, "dddd, YYYY") 
 
                         // Item Heading Info
                         .list-heading
                             h1 
-                                a(href=item.permalink)= item.title
-                            .author
-                                svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 563.43 563.43')
-                                    path(d='M280.79 314.56c83.266 0 150.803-67.54 150.803-150.804S364.055 13.416 280.79 13.416s-150.803 67.537-150.803 150.34S197.524 314.56 280.79 314.56zm0-261.825c61.06 0 111.02 49.96 111.02 111.02s-49.96 111.02-111.02 111.02-111.02-49.958-111.02-111.02 49.958-111.02 111.02-111.02zM19.89 550.015h523.65c11.1 0 19.89-8.79 19.89-19.89 0-104.083-84.653-189.2-189.198-189.2H189.198C85.116 340.926 0 425.58 0 530.126c0 11.1 8.79 19.89 19.89 19.89zM189.2 380.708h185.034c75.864 0 138.313 56.436 148.028 129.524H41.17c9.714-72.625 72.164-129.524 148.028-129.524z')
-
-
-                                = item.author
-                            .date
-                                svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 511.634 511.634')
-                                    path(d='M482.513 83.942c-7.225-7.233-15.797-10.85-25.694-10.85h-36.542v-27.41c0-12.56-4.477-23.315-13.422-32.26C397.906 4.474 387.156 0 374.59 0h-18.267c-12.565 0-23.318 4.475-32.264 13.422-8.95 8.945-13.423 19.7-13.423 32.26v27.41h-109.63v-27.41c0-12.56-4.475-23.314-13.422-32.26C178.64 4.475 167.885 0 155.32 0h-18.27c-12.562 0-23.317 4.475-32.264 13.422-8.945 8.945-13.42 19.7-13.42 32.26v27.41H54.822c-9.9 0-18.464 3.618-25.697 10.85-7.233 7.233-10.85 15.8-10.85 25.698v365.453c0 9.89 3.617 18.456 10.85 25.693 7.232 7.23 15.796 10.85 25.697 10.85h401.99c9.896 0 18.47-3.618 25.693-10.85 7.234-7.234 10.852-15.804 10.852-25.693V109.64c0-9.9-3.615-18.465-10.845-25.698zM347.187 45.686c0-2.667.85-4.858 2.56-6.567 1.71-1.712 3.9-2.57 6.57-2.57h18.268c2.67 0 4.853.855 6.57 2.57 1.712 1.71 2.567 3.902 2.567 6.566v82.224c0 2.666-.855 4.853-2.567 6.567-1.718 1.71-3.9 2.568-6.57 2.568h-18.268c-2.67 0-4.86-.855-6.57-2.568-1.71-1.715-2.56-3.9-2.56-6.567V45.686zm-219.272 0c0-2.667.855-4.858 2.568-6.567 1.714-1.712 3.9-2.57 6.567-2.57h18.27c2.668 0 4.86.855 6.568 2.57 1.71 1.71 2.57 3.902 2.57 6.566v82.224c0 2.666-.855 4.856-2.57 6.567-1.713 1.71-3.9 2.568-6.567 2.568h-18.27c-2.666 0-4.856-.855-6.567-2.568-1.71-1.715-2.568-3.9-2.568-6.567V45.686zm328.897 429.402H54.822v-292.36h401.99v292.36z')
-
-                                =dateFormat(item.date, "dddd, YYYY")                             
+                                a(href=item.permalink)= item.title                                                    
                         
 
                         // Item Description
@@ -267,10 +264,19 @@ block content
 
                         // Item Footer
                         .list-footer
-                            .read-more
-                                a(href=item.permalink)
-                                    | Read more
-                            .sharer
+                            .row
+                                .col-sm-7
+                                    .author
+                                        //- svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 563.43 563.43')
+                                        //-     path(d='M280.79 314.56c83.266 0 150.803-67.54 150.803-150.804S364.055 13.416 280.79 13.416s-150.803 67.537-150.803 150.34S197.524 314.56 280.79 314.56zm0-261.825c61.06 0 111.02 49.96 111.02 111.02s-49.96 111.02-111.02 111.02-111.02-49.958-111.02-111.02 49.958-111.02 111.02-111.02zM19.89 550.015h523.65c11.1 0 19.89-8.79 19.89-19.89 0-104.083-84.653-189.2-189.198-189.2H189.198C85.116 340.926 0 425.58 0 530.126c0 11.1 8.79 19.89 19.89 19.89zM189.2 380.708h185.034c75.864 0 138.313 56.436 148.028 129.524H41.17c9.714-72.625 72.164-129.524 148.028-129.524z')
+                                        img.postadmingthumb(src=item.postthumb, width="25px")
+
+                                        = item.author
+                                .col-sm-5
+                                    .read-more
+                                        a(href=item.permalink)
+                                            | Read more
+                                    .sharer
 
 
 
@@ -278,39 +284,42 @@ block content
           .row            
             each item in sortBy(blog).slice(2,5)
               .col-md-4.col-sm-4.col-xs-4.itemblogsbob
-                .list.box-shadow
+                .list.box-shadow.listsmallcard
 
-                    // Item Thumbnail
-                    .list-thumbnail
-                        img.img-responsive(src=item.thumbnail)
+                        // Item Thumbnail
+                        .list-thumbnail
+                            img.img-responsive(src=item.thumbnail)
+                            .date
+                                svg(width="15" xmlns='http://www.w3.org/2000/svg', viewbox='0 0 511.634 511.634')
+                                    path(d='M482.513 83.942c-7.225-7.233-15.797-10.85-25.694-10.85h-36.542v-27.41c0-12.56-4.477-23.315-13.422-32.26C397.906 4.474 387.156 0 374.59 0h-18.267c-12.565 0-23.318 4.475-32.264 13.422-8.95 8.945-13.423 19.7-13.423 32.26v27.41h-109.63v-27.41c0-12.56-4.475-23.314-13.422-32.26C178.64 4.475 167.885 0 155.32 0h-18.27c-12.562 0-23.317 4.475-32.264 13.422-8.945 8.945-13.42 19.7-13.42 32.26v27.41H54.822c-9.9 0-18.464 3.618-25.697 10.85-7.233 7.233-10.85 15.8-10.85 25.698v365.453c0 9.89 3.617 18.456 10.85 25.693 7.232 7.23 15.796 10.85 25.697 10.85h401.99c9.896 0 18.47-3.618 25.693-10.85 7.234-7.234 10.852-15.804 10.852-25.693V109.64c0-9.9-3.615-18.465-10.845-25.698zM347.187 45.686c0-2.667.85-4.858 2.56-6.567 1.71-1.712 3.9-2.57 6.57-2.57h18.268c2.67 0 4.853.855 6.57 2.57 1.712 1.71 2.567 3.902 2.567 6.566v82.224c0 2.666-.855 4.853-2.567 6.567-1.718 1.71-3.9 2.568-6.57 2.568h-18.268c-2.67 0-4.86-.855-6.57-2.568-1.71-1.715-2.56-3.9-2.56-6.567V45.686zm-219.272 0c0-2.667.855-4.858 2.568-6.567 1.714-1.712 3.9-2.57 6.567-2.57h18.27c2.668 0 4.86.855 6.568 2.57 1.71 1.71 2.57 3.902 2.57 6.566v82.224c0 2.666-.855 4.856-2.57 6.567-1.713 1.71-3.9 2.568-6.567 2.568h-18.27c-2.666 0-4.856-.855-6.567-2.568-1.71-1.715-2.568-3.9-2.568-6.567V45.686zm328.897 429.402H54.822v-292.36h401.99v292.36z')
 
-                    // Item Heading Info
-                    .list-heading
-                        h1 
-                            a(href=item.permalink)= item.title
-                        .author
-                            svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 563.43 563.43')
-                                path(d='M280.79 314.56c83.266 0 150.803-67.54 150.803-150.804S364.055 13.416 280.79 13.416s-150.803 67.537-150.803 150.34S197.524 314.56 280.79 314.56zm0-261.825c61.06 0 111.02 49.96 111.02 111.02s-49.96 111.02-111.02 111.02-111.02-49.958-111.02-111.02 49.958-111.02 111.02-111.02zM19.89 550.015h523.65c11.1 0 19.89-8.79 19.89-19.89 0-104.083-84.653-189.2-189.198-189.2H189.198C85.116 340.926 0 425.58 0 530.126c0 11.1 8.79 19.89 19.89 19.89zM189.2 380.708h185.034c75.864 0 138.313 56.436 148.028 129.524H41.17c9.714-72.625 72.164-129.524 148.028-129.524z')
+                                =dateFormat(item.date, "dddd, YYYY") 
 
+                        // Item Heading Info
+                        .list-heading
+                            h1 
+                                a(href=item.permalink)= item.title                                                    
+                        
 
-                            = item.author
-                        .date
-                            svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 511.634 511.634')
-                                path(d='M482.513 83.942c-7.225-7.233-15.797-10.85-25.694-10.85h-36.542v-27.41c0-12.56-4.477-23.315-13.422-32.26C397.906 4.474 387.156 0 374.59 0h-18.267c-12.565 0-23.318 4.475-32.264 13.422-8.95 8.945-13.423 19.7-13.423 32.26v27.41h-109.63v-27.41c0-12.56-4.475-23.314-13.422-32.26C178.64 4.475 167.885 0 155.32 0h-18.27c-12.562 0-23.317 4.475-32.264 13.422-8.945 8.945-13.42 19.7-13.42 32.26v27.41H54.822c-9.9 0-18.464 3.618-25.697 10.85-7.233 7.233-10.85 15.8-10.85 25.698v365.453c0 9.89 3.617 18.456 10.85 25.693 7.232 7.23 15.796 10.85 25.697 10.85h401.99c9.896 0 18.47-3.618 25.693-10.85 7.234-7.234 10.852-15.804 10.852-25.693V109.64c0-9.9-3.615-18.465-10.845-25.698zM347.187 45.686c0-2.667.85-4.858 2.56-6.567 1.71-1.712 3.9-2.57 6.57-2.57h18.268c2.67 0 4.853.855 6.57 2.57 1.712 1.71 2.567 3.902 2.567 6.566v82.224c0 2.666-.855 4.853-2.567 6.567-1.718 1.71-3.9 2.568-6.57 2.568h-18.268c-2.67 0-4.86-.855-6.57-2.568-1.71-1.715-2.56-3.9-2.56-6.567V45.686zm-219.272 0c0-2.667.855-4.858 2.568-6.567 1.714-1.712 3.9-2.57 6.567-2.57h18.27c2.668 0 4.86.855 6.568 2.57 1.71 1.71 2.57 3.902 2.57 6.566v82.224c0 2.666-.855 4.856-2.57 6.567-1.713 1.71-3.9 2.568-6.567 2.568h-18.27c-2.666 0-4.856-.855-6.567-2.568-1.71-1.715-2.568-3.9-2.568-6.567V45.686zm328.897 429.402H54.822v-292.36h401.99v292.36z')
+                        // Item Description
+                        .list-description
+                            p= item.shortdesc
 
-                            =dateFormat(item.date, "dddd, YYYY")
-                    
+                        // Item Footer
+                        .list-footer
+                            .row
+                                .col-sm-7
+                                    .author
+                                        //- svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 563.43 563.43')
+                                        //-     path(d='M280.79 314.56c83.266 0 150.803-67.54 150.803-150.804S364.055 13.416 280.79 13.416s-150.803 67.537-150.803 150.34S197.524 314.56 280.79 314.56zm0-261.825c61.06 0 111.02 49.96 111.02 111.02s-49.96 111.02-111.02 111.02-111.02-49.958-111.02-111.02 49.958-111.02 111.02-111.02zM19.89 550.015h523.65c11.1 0 19.89-8.79 19.89-19.89 0-104.083-84.653-189.2-189.198-189.2H189.198C85.116 340.926 0 425.58 0 530.126c0 11.1 8.79 19.89 19.89 19.89zM189.2 380.708h185.034c75.864 0 138.313 56.436 148.028 129.524H41.17c9.714-72.625 72.164-129.524 148.028-129.524z')
+                                        img.postadmingthumb(src=item.postthumb, width="25px")
 
-                    // Item Description
-                    .list-description
-                        p= item.shortdesc
-
-                    // Item Footer
-                    .list-footer
-                        .read-more
-                            a(href=item.permalink)
-                                | Read more
-                        .sharer
+                                        = item.author
+                                .col-sm-5
+                                    .read-more
+                                        a(href=item.permalink)
+                                            | Read more
+                                    .sharer
 
 
         #more-blog.section.text-center
