change web title

--- a/views/layout-new.jade
+++ b/views/layout-new.jade
@@ -11,7 +11,7 @@ html
         meta(name="keywords" content= records.site.sitedata[0].metakeyword)
 
         title= records.site.sitedata[0].sitename +" - "
-             | Bob Wothersomm | Home
+             | Home
 
         link(rel="icon", href= records.site.sitedata[0].icon, type="image/*")
         link(rel="shortcut icon", href= records.site.sitedata[0].icon, type="img/*")
