--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html
         meta(name='author', content= records.site.sitedata[0].metauthor)
         meta(name="keywords" content= records.site.sitedata[0].metakeyword)
 
-        title(name="title" content="Bob Blog - Home")
+        title(name="title" content="WebriQ Blog - Home")
 
         link(rel="icon", href= records.site.sitedata[0].icon, type="image/*")
         link(rel="shortcut icon", href= records.site.sitedata[0].icon, type="img/*")
