--- a/views/includes/header-new.jade
+++ b/views/includes/header-new.jade
@@ -95,9 +95,11 @@
         .col-md-12.text-center.detleft-slider
           h1=records.config.configslider[0].slidertext
           h4=records.config.configslider[0].slidersubtext
-          .imgslideranimate
+          .imgslideranimate.slider1
             img.hvr-bob.img1slide1(src="../img/bob/slider-right.png")
             img.hvr-bob.img1slide2(src="../img/bob/slider-right2.png")
+          .imgslideranimate.slider2.hidden
+            img.hvr-bob.img1slide1(src="../img/bob/slider-webriqblog-hidden.png")
           div.btnsliderbob
             //- a.bobbtnhead.hvr-ripple-out(href='/#copyright') 
             //-   img(src="../img/bob/talk-to-usicon.png")
